Correction contraste bouton au hover

--- a/style.css
+++ b/style.css
@@ -794,8 +794,8 @@ h4 {
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
-    color: #FFFFFF!important;
+    background: #1f1f1f!important;
+    color: #f3976c! important;
 }
 
 .ltc-white {
